fixed pom overwriting issue